prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/init_with_wrong_type.diag.txt
ERROR: Assigned null type differs from the declared type
testData/diagnostics/init_with_wrong_type.nut:1:0

local y: table
^------
return y


